# Imitation_of_ATM_operation

./: CMakeLists.txt  README.md  cl_application.h  cl_base.h  controller.cpp  controller.h  giver.h  identifier.cpp  identifier.h  main.cpp  printer.h  reader.cpp  reader.h  taker.h
Headers/: cl_application.h  cl_base.h
Sources/: cl_application.cpp  cl_base.cpp  giver.cpp  printer.cpp  taker.cpp
